fixed agenda text wrap

--- a/src/app/agenda-evento-text/agenda-evento-text.component.css
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.css
@@ -9,6 +9,7 @@
     font-size: 24px;
     line-height: 1.5;
     text-align: justify;
+    flex-wrap: wrap;
 }
 
 .evento-text {
